<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/activity_main">
      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/linear"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="45dp"
             android:layout_height="38dp"
             android:layout_marginTop="30dp"
             android:layout_marginRight="20dp"
             android:src="@drawable/ic_baseline_account_circle_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0" />

         <TextView
             android:id="@+id/hello"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hello"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintVertical_bias="0"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/bebasneue"
             android:textSize="36sp"
             android:textStyle="bold"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView4" />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/bebasneue"
             android:text="@string/peeps"
             android:textColor="@color/primarly"
             android:textSize="36sp"
             android:textStyle="bold"
             android:layout_marginLeft="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@+id/hello"
             app:layout_constraintTop_toTopOf="@+id/hello"
             app:layout_constraintVertical_bias="0" />

         <EditText
             android:id="@+id/search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/search"
             android:textColorHint="@color/white"
             android:textSize="14sp"
             android:paddingLeft="20dp"
             app:layout_constraintVertical_bias="0"
             app:layout_constraintWidth_percent=".7"
             app:layout_constraintHorizontal_bias="0"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:elevation="4dp"
             android:background="@drawable/search_bg"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/hello"
             app:layout_constraintTop_toBottomOf="@+id/hello"
             android:layout_marginTop="15dp"/>

         <ImageView
             android:layout_width="33dp"
             android:layout_height="39dp"
             android:src="@drawable/ic_baseline_search_24"
             android:layout_marginLeft="10dp"
             app:layout_constraintBottom_toBottomOf="@+id/search"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toEndOf="@+id/search"
             app:layout_constraintTop_toTopOf="@+id/search"
             app:layout_constraintVertical_bias=".5" />


          <androidx.cardview.widget.CardView
              android:id="@+id/beritacard"
              android:layout_width="match_parent"
              android:layout_height="130dp"
              android:layout_marginRight="10dp"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="20dp"
              app:layout_constraintTop_toBottomOf="@+id/search"
              app:cardBackgroundColor="@color/blackb">

              <HorizontalScrollView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">

                  <LinearLayout
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="15dp"
                      android:orientation="horizontal">

                      <ImageView
                          android:id="@+id/beritasatu"
                          android:layout_width="170dp"
                          android:layout_height="100dp"
                          android:layout_marginLeft="10dp"
                          android:src="@drawable/bts" />

                      <ImageView
                          android:id="@+id/beritadua"
                          android:layout_width="170dp"
                          android:layout_height="100dp"
                          android:layout_marginLeft="8dp"
                          android:src="@drawable/tech" />

                      <ImageView
                          android:id="@+id/beritatiga"
                          android:layout_width="170dp"
                          android:layout_height="100dp"
                          android:src="@drawable/ran" />
                  </LinearLayout>
              </HorizontalScrollView>
          </androidx.cardview.widget.CardView>

         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="30dp"
             app:layout_constraintTop_toBottomOf="@+id/beritacard"
             app:cardCornerRadius="30dp"
             app:cardBackgroundColor="@color/blackb">

         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/profileUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             app:layout_constraintVertical_bias="0"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             tools:listitem="@layout/profile_row"/>
         </androidx.cardview.widget.CardView>
      </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>