<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileLengkap"
    android:background="@drawable/bg_profil_lengkap">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo_profil"
        android:layout_width="253dp"
        android:layout_height="214dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        tools:src="@android:color/darker_gray" />

    <TextView
        android:id="@+id/lengkap_nama"
        android:layout_width="176dp"
        android:layout_height="27dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_item_photo_profil"
        app:layout_constraintVertical_bias="0"
        tools:text="Nama" />

    <TextView
        android:id="@+id/lengkap_detail"
        android:layout_width="319dp"
        android:layout_height="22dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lengkap_nama"
        app:layout_constraintVertical_bias="0"
        tools:text="Detail" />

    <TextView
        android:id="@+id/lengkap_work"
        android:layout_width="322dp"
        android:layout_height="22dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lengkap_detail"
        app:layout_constraintVertical_bias="0"
        tools:text="Pekerjaan" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/lengkap_work">

        <androidx.cardview.widget.CardView
            android:id="@+id/followers"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/primarly"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/bebasneue"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    android:textColor="@color/blackb"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_followers"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/bebasneue"
                    android:textAlignment="center"
                    android:textColor="@color/blackb"
                    android:textSize="20sp"
                    tools:text="55" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/following"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/primarly"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/bebasneue"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textColor="@color/blackb"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_following"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/bebasneue"
                    android:textAlignment="center"
                    android:textColor="@color/blackb"
                    android:textSize="20sp"
                    tools:text="55" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="59dp"
        android:layout_height="46dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0"
        android:layout_marginLeft="55dp"
        app:srcCompat="@drawable/ic_repository" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/repository"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="44dp"
        android:layout_height="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0"
        android:layout_marginLeft="55dp"
        app:srcCompat="@drawable/ic_baseline_work_24" />

    <TextView
        android:id="@+id/tempat_kerja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0"
        tools:text="Rumah Belajar Indonesia" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="33dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0"
        android:layout_marginLeft="60dp"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />

    <TextView
        android:id="@+id/alamat"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tempat_kerja"
        app:layout_constraintVertical_bias="0"
        tools:text="Jln. Malioboro No.81, Taman Impian" />

</androidx.constraintlayout.widget.ConstraintLayout>